// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tooltipify does nothing for empty element 1`] = `<div />`;

exports[`tooltipify ignores node 1`] = `
<div>
  <a
    href="/foo"
  >
    click
  </a>
</div>
`;

exports[`tooltipify wraps single anchor 1`] = `
<div>
  <span>
    <div
      class="mx_TextWithTooltip_target"
      tabindex="-1"
    >
      <span>
        <a
          href="/foo"
        >
          click
        </a>
      </span>
    </div>
  </span>
</div>
`;
